Nav - Fix an issue with overlapping links causing clicking not to work

--- a/public/css/peak/starter.css
+++ b/public/css/peak/starter.css
@@ -483,7 +483,6 @@
         gap: var(--spacing-s-x-x);
         align-items: center;
         padding: var(--spacing-s-x-x);
-        margin: calc(0% - var(--spacing-s-x-x));
         font-size: var(--font-size-s-x); line-height: var(--font-size-s-x-line-height);
         font-weight: var(--font-family-ui-weight-strong);
 
@@ -579,7 +578,6 @@
 
     & a {
         padding-block: var(--spacing-s-x-x);
-        margin: calc(0% - var(--spacing-s-x-x));
     }
 }
 
